--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
     </div>
 
     <!-- container for the rest of content -->
-    <div class="container-body">
+    <main class="container-body">
 
       <!-- main container for image and title -->
       <div class="main-container">
@@ -39,7 +39,7 @@
         <!-- container for image -->
         <div class="photo-frame">
           <div class="photo-container">
-              <img src="images/image.png" alt="Portrait" class="photo" />
+              <img src="images/image.png" alt="Portrait" class="photo">
           </div>
         </div>
 
@@ -105,7 +105,7 @@
 
       <!-- container for education-->
       <div id="education" class="education">
-        <h2><i class="fa-solid fa-graduation-cap" style="margin-right: 1em;"></i>Education and courses</h2>
+        <h2><i class="fa-solid fa-graduation-cap" style="margin-right: 1em;"></i>Education</h2>
         <div>
           <h3>University of Applied Sciences, Jyväskylä</h3>
           <p class="p-education"><i class="fa-solid fa-calendar-days" style="margin-right: 1em;"></i>2024-2028</p>
@@ -144,17 +144,17 @@
                 
         <div>
           <h2>Russian</h2>
-          <p>Native or bilingual proficiency</p>
+          <p style="text-align: left;">Native or bilingual proficiency</p>
         </div>
 
         <div>
           <h2>English</h2>
-          <p>Professional working proficiency</p>
+          <p style="text-align: left;">Professional working proficiency</p>
         </div>
 
         <div>
           <h2>Finnish</h2>
-          <p>Working proficiency</p>
+          <p style="text-align: left;">Working proficiency</p>
         </div>
 
       </aside>
@@ -172,7 +172,7 @@
 
           <div class="screenshot">
             <a href="images/roomies.png" target="_blank">
-              <img src="images/roomies.png" alt="Screenshot of the Roomies App booking interface" />
+              <img src="images/roomies.png" alt="Screenshot of the Roomies App booking interface">
             </a>
           </div>
 
@@ -196,7 +196,7 @@
         <article class="project">
           <div class="screenshot">
             <a href="images/selvavastaus.png" target="_blank">
-              <img src="images/selvavastaus.png" alt="Screenshot of the Selvä Vastaus interface" />
+              <img src="images/selvavastaus.png" alt="Screenshot of the Selvä Vastaus interface">
             </a>
           </div>
 
@@ -211,7 +211,7 @@
         </article>
 
       </div>
-    </div>
+    </main>
 
     <script>
       function myFunction() {
@@ -235,7 +235,7 @@
       <a href="https://github.com/romashkoyp" target="_blank"><i class="fa-brands fa-github"></i></a>
       <a href="https://www.linkedin.com/in/romashkoyp/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     </div>
-    <p>Yaroslav Romashko © 2024</p>
+    <p style="text-align: center;">Yaroslav Romashko © 2024</p>
   </footer>
   </body>
 </html>
