--- a/index.html
+++ b/index.html
@@ -63,24 +63,23 @@
 
       <!-- container for profile information -->
       <section id="profile" class="profile">
-        <h2>Professional profile</h2>
+        <h2>Profile</h2>
         <p>
-          I worked for about 6 years in an IT association in my home country,
-          where I was responsible for marketing and attracting new companies
-          to the association (B2B sales). Before that, I had a university
-          degree in management and marketing.
+          I spent six years working for an IT association back home, where I managed marketing initiatives 
+          and led B2B sales efforts to bring new companies into our membership. This role built 
+          upon my university degree in management and marketing.
         </p>
         <br>
         <p>
-          I am now focused on changing my profession in Finland to become a developer, 
-          and I am really excited about creating new programs and solving interesting tasks. 
-          I have completed a couple of IT projects, which you can find below, including 
-          this website I made. In my free time, I help researchers with data analysis.
+          Now based in Finland, I'm making an exciting career transition into software development. 
+          I'm thoroughly passionate about programming and problem-solving, 
+          and I've already completed several IT projects, including the website you're currently viewing. 
+          Outside of coding, I assist researchers with their data analysis needs.
         </p>
         <br>
         <p>
-          If your company or you personally need an intern or junior developer,
-          just let me know about it.
+          I'm actively seeking opportunities as an intern or junior developer.
+          If you or your organization has a suitable opening, I'd be delighted to hear from you.
         </p>
       </section>
 
@@ -182,12 +181,13 @@
           <div class="project-content">
             <h2 style="text-align: center;">Roomies App</h2>
             <p>
-              Web application built with JavaScript, Node.js, Docker, Express, PostgreSQL, 
-              Jest for the backend and React, Vite, React Redux, React Big Calendar, Styled 
-              Components, Playwright. Eslint used for both parts.
-              The basic idea is to book a room in a hotel or office building with authorized 
-              access and administrative control. This is the final project for the 
-              Full Stack Open Course from the University of Helsinki.
+              A comprehensive booking system developed using modern web technologies: 
+              JavaScript, Node.js, Docker, Express, and PostgreSQL for the backend, 
+              complemented by React, Vite, Redux, React Big Calendar, Styled Components for the frontend. 
+              The application features Jest for backend testing, Playwright for end-to-end testing, 
+              and maintains code quality through ESLint. This enterprise-level solution enables authenticated 
+              users to book rooms in hotels or office buildings, with full administrative oversight. 
+              The project served as my capstone submission for the University of Helsinki's Full Stack Open Course.
             </p>
           </div>
           <a href="https://github.com/romashkoyp/roomies" class="project-button contact" target="_blank" style="width: auto; padding: 0 1em;">
@@ -205,8 +205,13 @@
 
           <div class="project-content">
             <h2 style="text-align: center;">Selvä Vastaus</h2>
-            <p>Web application built with Python, Flask, Jinja, and SQLite for the backend, and HTML, CSS, Bootstrap for frontend rendering.</p>
-            <p>The basic idea is to find Finnish words by their endings. This is the final project for the CS50x course from Harvard University.</p>
+            <p>
+              A linguistic search tool crafted with Python, utilizing Flask and SQLite for backend operations, 
+              whilst employing HTML, Bootstrap and Jinja for an intuitive frontend interface. This specialized 
+              application helps users locate Finnish words based on their suffixes, 
+              offering valuable assistance for language learning and research. 
+              I developed this as my final project for Harvard University's CS50x course.
+            </p>
           </div>
           <a href="https://selvavastaus.onrender.com/" class="project-button contact" target="_blank" style="width: auto; padding: 0 1em;">
             Visit Selvä Vastaus Website
