update project 1 link

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
               The project served as my capstone submission for the University of Helsinki's Full Stack Open Course.
             </p>
           </div>
-          <a href="https://github.com/romashkoyp/roomies" class="project-button contact" target="_blank" style="width: auto; padding: 0 1em;">
-            View Roomies App on GitHub
+          <a href="https://roomies-frontend-fpzi.onrender.com/" class="project-button contact" target="_blank" style="width: auto; padding: 0 1em;">
+            Visit Roomies App on Website
           </a>
         </article>
 
