update language description

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 
         <div>
           <h2>Russian</h2>
-          <p style="text-align: left;">Native or bilingual proficiency</p>
+          <p style="text-align: left;">Native proficiency</p>
         </div>
 
         <div>
