correct grammar for button

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </p>
           </div>
           <a href="https://roomies-frontend-fpzi.onrender.com/" class="project-button contact" target="_blank" style="width: auto; padding: 0 1em;">
-            Visit Roomies App on Website
+            Visit Roomies App Website
           </a>
         </article>
 
