update project description

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <p>Relational databases (1 credit)</p>
         <p>CI/CD (1 credit)</p>
         <p>Containers (1 credit)</p>
-        <p>Own project in progress - 95% (see below Roomies App)</p>
+        <p>Roomies App (see below)</p>
         <br>
         <hr>
         <br>
