add mark down report and fix some styles

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="words">
           <span style="margin-top: 0em; font-size: 1.5em;">React</span>
-          <h1 class="name">DEVELOPER</h1>
+          <h4 class="developer">DEVELOPER</h4>
           <span style="margin-top: 0.5em;">Node.js</span>
         </div>
 
