Enhance education section with structured course details and improve styling for better readability

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <p class="p-education"><i class="fa-solid fa-calendar-days" style="margin-right: 1em;"></i>2024-2027</p>
         </div>
         <div id="jamk" style="display: none;">
-          <p>Engineer (Bachelor of Science), Information Technology</p>
+          <p class="course">Engineer (Bachelor of Science), Information Technology</p>
         </div>
         <br>
         <hr>
@@ -118,14 +118,49 @@
           <p class="p-education"><i class="fa-solid fa-calendar-days" style="margin-right: 1em;"></i>2024</p>
         </div>
         <div id="helsinki" style="display: none;">
-          <p>Full Stack Open course, open studies.</p>
-          <p>React, NodeJS, Express, MongoDB, Deploiment Web App (7 credits)</p>
-          <p>React Native (2 credits)</p>
-          <p>GraphQL (1 credit)</p>
-          <p>Relational databases (1 credit)</p>
-          <p>CI/CD (1 credit)</p>
-          <p>Containers (1 credit)</p>
-          <p>Roomies App (see below)</p>
+          <p class="course">Full Stack Open course, open studies</p>
+          <table class="course-table">
+              <thead>
+                <tr>
+                  <th>Course Module</th>
+                  <th>Credits</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Full Stack Web Application Development Exercise</td>
+                  <td>10</td>
+                </tr>
+                <tr>
+                  <td>React, NodeJS, Express, MongoDB, Deployment Web App</td>
+                  <td>7</td>
+                </tr>
+                <tr>
+                  <td>React Native</td>
+                  <td>2</td>
+                </tr>
+                <tr>
+                  <td>GraphQL</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>Relational databases</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>CI/CD</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>Containers</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td><b>Total:</b></td>
+                  <td><b>23</b></td>
+                </tr>
+              </tbody>
+            </table>
         </div>
         <br>
         <hr>
@@ -135,7 +170,7 @@
           <p class="p-education"><i class="fa-solid fa-calendar-days" style="margin-right: 1em;"></i>2022-2023</p>
         </div>
         <div id="harward" style="display: none;">
-          <p>CS50x course, open studies.</p>
+          <p class="course">CS50x course, open studies.</p>
           <p>Basics of IT: C, Python, SQL</p>
           <p>10 problem sets, 9 labs and final project (see below Selvä Vastaus)</p>
         </div>
@@ -143,23 +178,47 @@
 
       <!-- container for languages -->
       <aside class="languages">
-        <div style="background-color: #f1e8f8; box-shadow: none;">
+        <div class="separate_language" style="background-color: #f1e8f8; box-shadow: none;">
           <h2>Languages</h2>
         </div>
                 
-        <div>
+        <div class="separate_language">
           <h2>Russian</h2>
-          <p style="text-align: left;">Native proficiency</p>
+          <p style="margin-bottom: 0.7em;">
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+          </p>
+          <p>Native proficiency</p>
         </div>
 
-        <div>
+        <div class="separate_language">
           <h2>English</h2>
-          <p style="text-align: left;">Professional working proficiency</p>
+          <p style="margin-bottom: 0.7em;">
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: lightgrey;"></i>
+            <i class="fa-solid fa-star" style="color: lightgrey;"></i>
+          </p>
+          <p>Professional working proficiency</p>
         </div>
 
-        <div>
+        <div class="separate_language">
           <h2>Finnish</h2>
-          <p style="text-align: left;">Working proficiency</p>
+          <p style="margin-bottom: 0.7em;">
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+            <i class="fa-solid fa-star" style="color: lightgrey;"></i>
+            <i class="fa-solid fa-star" style="color: lightgrey;"></i>
+            <i class="fa-solid fa-star" style="color: lightgrey;"></i>
+          </p>
+          <p>Working proficiency</p>
         </div>
 
       </aside>
