add sorting functionality to the table

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
           <table class="course-table">
               <thead>
                 <tr>
-                  <th>Course Module</th>
-                  <th>Credits</th>
+                  <th class="sortable" data-sort="course">Course Module <i class="fa-solid fa-sort"></i></th>
+                  <th class="sortable" data-sort="credits">Credits <i class="fa-solid fa-sort"></i></th>
                 </tr>
               </thead>
               <tbody>
@@ -133,7 +133,7 @@
                   <td>
                     <div style="display: flex; flex-direction: row; align-items: center;">
                       <span>10</span>
-                        <span></span>
+                      <span></span>
                     </div>
                   </td>
                 </tr>
