add new project to the portfolio

--- a/index.html
+++ b/index.html
@@ -209,6 +209,30 @@
           </a>
         </article>
 
+        <!-- Project 3 -->  
+        <article class="project">
+          <div class="screenshot">
+            <a href="images/mainos.png" target="_blank">
+              <img src="images/mainos.png" alt="Screenshot of Mainos">
+            </a>
+          </div>
+
+          <div class="project-content">
+            <h2 style="text-align: center;">Mainos</h2>
+            <p>
+              An interactive location tracking tool for Jyväskylä using JavaScript, Leaflet.js mapping library, 
+              and IndexedDB for data persistence. This web application enables users to load campaign-specific 
+              locations with unique color coding, track visit progress with automatic saving, and manage multiple 
+              campaigns simultaneously. Features include marker clustering, city filtering, legend display, 
+              and progress import/export functionality, providing a comprehensive solution for location-based 
+              campaign management.
+            </p>
+          </div>
+          <a href="https://romashkoyp.github.io/mainos/" class="project-button contact" target="_blank" style="width: auto; padding: 0 1em;">
+            Visit Mainos Website
+          </a>
+        </article>
+
       </div>
     </main>
 
