fix console error

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div id="imageModal" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <img id="modalImg" src="images" alt="Enlarged image">
+        <img id="modalImg" src="" alt="Enlarged image">
       </div>
     </div>
 
